--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,5 @@
 ---
-layout: default_2
-title: Your New Jekyll Site
+layout: default
+title: Welcome to Bagsy!
+subTitle: Subscriptions and Refunds in Dibs Made Easy
 ---
-
-<section class="home posts">
-  <h1>Blog Posts</h1>
-  {% for post in site.posts %}
-    <article><time>{{ post.date | date_to_string }}</time> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></article>
-  {% endfor %}
-</section>
