--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Welcome to Bagsy!
-subTitle: Subscriptions and Refunds in Dibs Made Easy
+title: This is Bagsy!
+subTitle: Super Simple Subscriptions and Refunds with DIBS
 ---
