Polished the page a bit more

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: This is Bagsy!
-subTitle: Super Simple Subscriptions and Refunds with DIBS
+subTitle: Super Simple Subscriptions and Refunds management with DIBS
 ---
